Display the entire list on the home page

--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -7,6 +7,14 @@
       <input name="item_text" id="id_new_item" placeholder="Enter a to-do item"/>
       {% csrf_token %}
     </form>
-    <table id="id_list_table"> </table>
+    <table id="id_list_table">
+    {% for item in items %}
+    <tr>
+      <td>
+        {{ item.text }}
+      </td>
+    </tr>
+    {% endfor %}
+    </table>
   </body>
 </html>
