--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -11,7 +11,7 @@
     {% for item in items %}
     <tr>
       <td>
-        {{ item.text }}
+        {{ forloop.counter }}: {{ item.text }}
       </td>
     </tr>
     {% endfor %}
