--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -2,7 +2,7 @@
   <title>To-Do lists</title>
   <body>
     <h1>Your To-Do list</h1>
-    <form method="POST" action="/lists/new">
+    <form method="POST" action="{{ add_item_url }}">
       <input name="item_text" id="id_new_item" placeholder="Enter a to-do item"/>
       {% csrf_token %}
     </form>
