--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -1,29 +1,27 @@
-<html>
-  <title>To-Do lists</title>
-  <body>
-    <h1>Start a new To-Do list</h1>
-    <form method="POST" action="/lists/new">
-      <input name="item_text" id="id_new_item" placeholder="Enter a to-do item"/>
-      {% csrf_token %}
-    </form>
-    <h1>Existing Lists</h1>
-    <table>
-      <thead>
-        <tr>
-          <td>ID</td>
-          <td>number of items</td>
-        </tr>
-      </thead>
-      {% for l in lists %}
-      <tr>
-        <td>
-          <a href="/lists/{{ l.id }}">{{ l.id }}</a>
-        </td>
-        <td>
-          {{ l.item_set.count }}
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% block header_text %}Start a new To-Do list{% endblock %}
+
+{% block form_action %}/lists/new{% endblock %}
+
+{% block table %}
+<h1>Existing Lists</h1>
+<table>
+  <thead>
+    <tr>
+      <td>ID</td>
+      <td>number of items</td>
+    </tr>
+  </thead>
+  {% for l in lists %}
+  <tr>
+    <td>
+      <a href="/lists/{{ l.id }}">{{ l.id }}</a>
+    </td>
+    <td>
+      {{ l.item_set.count }}
+    </td>
+  </tr>
+  {% endfor %}
+</table>
+{% endblock %}
