--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -1,19 +1,13 @@
-<html>
-  <title>To-Do lists</title>
-  <body>
-    <h1>Your To-Do list</h1>
-    <form method="POST" action="{{ add_item_url }}">
-      <input name="item_text" id="id_new_item" placeholder="Enter a to-do item"/>
-      {% csrf_token %}
-    </form>
+{% extends 'base.html' %}
+
+{% block header_text %}Your To-Do list{% endblock %}
+
+{% block form_action %}{{ add_item_url }}{% endblock %}
+
+{% block table %}
     <table id="id_list_table">
-    {% for item in items %}
-    <tr>
-      <td>
-        {{ forloop.counter }}: {{ item.text }}
-      </td>
-    </tr>
-    {% endfor %}
+        {% for item in items %}
+            <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+        {% endfor %}
     </table>
-  </body>
-</html>
+{% endblock %}
