--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -5,7 +5,7 @@
 {% block form_action %}{{ add_item_url }}{% endblock %}
 
 {% block table %}
-    <table id="id_list_table">
+    <table id="id_list_table" class="table">
         {% for item in items %}
             <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
         {% endfor %}
