--- a/superlists/lists/templates/base.html
+++ b/superlists/lists/templates/base.html
@@ -30,6 +30,15 @@
         {% endblock %}
       </div>
     </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="text-center">
+          <p class="text-muted">
+            Following <a href="http://chimera.labs.oreilly.com/books/1234000000754/ch01.html">Test-Driven Whatchamacallit With Python</a>
+          </p>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 
