--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -2,11 +2,11 @@
 
 {% block header_text %}Your To-Do list{% endblock %}
 
-{% block form_action %}{{ add_item_url }}{% endblock %}
+{% block form_action %}/lists/{{ list.id }}/add_item{% endblock %}
 
 {% block table %}
     <table id="id_list_table" class="table">
-        {% for item in items %}
+        {% for item in list.item_set.all %}
             <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
         {% endfor %}
     </table>
